# XT-test

./: .gitattributes  .gitignore  CODEOWNERS  CONTRIBUTING.md  DYNAMIC_CONTENT_SYSTEM.md  README.md  package-lock.json  package.json  start_app.bat
.trae/rules/: project_rules.md
backend/: .gitignore  README.md  get_txt.py  main.py  pyproject.toml  requirements.txt  run.py  server.py  start.py  test.html  user.py
backend/scripts/: start.bat
backend/src/: __init__.py  app.py  config.py  main.py  server.py
backend/src/api/: handlers.py  routes.py
backend/src/services/: dialogue_service.py
backend/src/utils/: http_utils.py
backend/tests/: test_app.py
backend/xt/: __init__.py  app.py  config.py  events.py  socketio.py
backend/实验区/tcp/: tcp--1-MVD.py  tcp--1.py  tcp--2-server.py  tcp--2-user.py
frontend/: README.md  components.json  package-lock.json  package.json  tsconfig.json
server/: .env  .gitignore  CACHE_README.md  LOG_OPTIMIZATION_README.md  SESSION_OPTIMIZATION_README.md  admin.json  app.py  cache_config_example.py  config.py  requirements.txt  session.json  test_stream.py  users.db
server/api/: auth.py  cache.py  chat.py  log.py  websocket.py
server/db/: users.db
server/logs/: app_logs_20250809.jsonl  app_logs_20250810.jsonl  app_logs_20250811.jsonl  performance_20250810.jsonl  performance_20250811.jsonl
server/middleware/: logging_middleware.py
xt/: BUNDLE_OPTIMIZATION.md  README.md  bundle-analyzer.config.js  capacitor.config.ts  middleware.ts  next.config.ts  package-lock.json  package.json  production.config.json
(+115 files in other folders)
